--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build:css": "tailwindcss -i ./public/styles.css -o ./public/dist/styles.css --watch"
   },
   "keywords": [],
   "author": "",
