--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,7 +24,9 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
+    "mongoose-paginate-v2": "^1.8.5",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
